--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,6 +7,7 @@
     tools:context=".fragments.ListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTaskList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
